fix: Cards gap

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,10 @@ button{
   color: var(--color-purpleDark);
 }
 
+.font-primary {
+  font-family: var(--font-epunda);
+}
+
+.font-secondary {
+  font-family: var(--font-starborn);  
+}
